ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.11
    • Affects Version/s: None
    • Component/s: Internal Code, Networking
    • None
    • Fully Compatible
    • ALL
    • Service Arch 2019-05-20
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      It should be legal to call shutdown() on a network interface without calling startup() (because an owning task executor will call shutdown() in its dtor).

      Currently this crashes (because the NiTL doesn't keep track of whether it's started). Changing the _inShutdown atomic to a _state enum atomic can resolve that problem

            Assignee:
            Mira Carey
            Reporter:
            Mira Carey
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: